# amele

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  GEMINI.md  README.md  RELEASE-v0.0.11.md  SECURITY.md  agent.md  build.rs  meson.build  sonar-project.properties
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: ci.yml  sonarcloud.yml
docs/: android.md  linux.md  windows.md
kaynak/: ana.c
kaynak/arayuz/: arayuz.c  arayuz.h  sekmeler.c  sekmeler.h
kaynak/cekirdek/: ayarlar.c  ayarlar.h  gunluk.c  gunluk.h  guvenlik.c  guvenlik.h  hata_yonetim.c  hata_yonetim.h  is_kuyrugu.c  is_kuyrugu.h
kaynak/moduller/dogrulama/: hash.c  hash.h
kaynak/moduller/edinim/: avml_ram.c  avml_ram.h  disk_edinim.c  disk_edinim.h  hyperv_artifact.c  hyperv_artifact.h  uzak_disk_edinim.c  uzak_disk_edinim.h  winpmem_ram.c  winpmem_ram.h
kaynak/moduller/kanit/: kanit_kasasi.c  kanit_kasasi.h
kaynak/moduller/rapor/: rapor.c  rapor.h
kaynak/moduller/vpn/: wireguard.c  wireguard.h
kaynak/qt/: ana_qt.cpp  worm.rc
packaging/: worm.desktop
packaging/appimage/: AppRun  amele.desktop  worm.desktop
packaging/windows/: amele.wxs  license.rtf  worm.wxs
scripts/: build-appimage.sh  build-linux-packages.sh  build-windows-msi.ps1  ci-build-linux-packages.sh  update_contributors.py
src/: android.rs  android_analysis.rs  android_mft.rs  diagnostics.rs  disk.rs  disk_analysis.rs  error.rs  evidence.rs  hash.rs  job.rs  lib.rs  logging.rs  main.rs  native_window.rs  ram.rs  ram_analysis.rs  remote.rs  report.rs  router.rs  server.rs  settings.rs  ui_server.rs  volatility.rs  wireguard.rs
src/android/: adb.rs  capability.rs  errors.rs  extractors.rs  filesystem.rs  logical.rs  manifest.rs  orchestrator.rs  profile.rs  ram.rs  remote.rs  session.rs
src/android_mft/: bundle.rs  format.rs  outputs.rs  parsers.rs
src/api/: android.rs  evidence.rs  helpers.rs  jobs.rs  mod.rs  mount.rs  ram.rs  router.rs  state.rs  system.rs  wireguard.rs
tests/: i18n.test.js  routes.test.js  run_tests.sh
tools/: amele_volatility_worker.py  worm_volatility_worker.py
ui/: README.md  android.js  app.js  developer.js  i18n.js  icons.js  index.html  styles.css
ui/core/: api.js  errors.js  platform.js  utils.js
ui/pages/: agent.js  analysis.js  home.js  linux.js  other.js  windows.js  workflow.js
veriler/: ui_dil.json  varsayilan_ayarlar.json
